# zero2prod

./: .env  Cargo.toml  configuration.yaml
doc/sqlx/: migrate.md
migrations/: 20240924163320_create_subscriptions_table.sql  20241018142426_add_status_to_subscriptions.sql  20241018142916_make_status_not_null_in_subscriptions.sql  20241018152322_create_subscription_tokens_table.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
