[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
anyhow = "1.0.89"
chrono = "0.4.38"
config = "0.14.0"
lettre = "0.11.9"
log = "0.4.22"
maik = "0.1.0"
mime = "0.3.17"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.13"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "macros",
    "migrate",
    "uuid",
    "mysql",
    "chrono",
    "runtime-tokio-rustls",
]

[dev-dependencies]
claim = "0.5.0"
fake = "2.10.0"
mockall = "0.13.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.2"
